--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,44 @@
  *= require_tree .
  *= require_self
  */
+
+
+html, body {
+    box-sizing: border-box !important;
+    margin:0 !important;
+    padding:0 !important;
+    height:100% !important;
+}
+
+/*Styles for the body container, includes: topbar-main-footerbar*/
+#body-container{
+    min-height: 100%;
+    position: relative;
+    background-color:  #f2f2f2;
+}
+
+/*Styles for the navbar footer*/
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 35px;
+}
+
+.navbar-container {
+    color: #f1f1f1;
+    height: 33px;
+    position: relative;
+}
+
+.navbar-container h5 {
+    margin-top: 10px;
+}
+
+.navbar-container h4 {
+    margin-top: 7px;
+}
+
+.clear {
+    clear: both;
+}
