--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -18,9 +18,22 @@
 
 @navbar-default-bg: #152737;
 @navbar-default-link-color: #f1f1f1;
-@navbar-default-link-hover-color: #d1d1d1;
 @navbar-default-color: #f1f1f1;
+@navbar-default-link-hover-color: #d1d1d1;
 @navbar-margin-bottom: 0;
 @navbar-border-radius: 0;
-@navbar-height: 35px !important;
-@navbar-default-link-active-color: #d1d1d1;
+
+@btn-primary-bg: #0FB493;
+
+@panel-default-heading-bg: white;
+@panel-body-padding: 5px;
+
+.panel {
+  border: none !important;
+}
+
+.panel-body {
+  border-top: none !important;
+  border-left: none !important;
+  border-right: none !important;
+}
