Creating views for home page and "my exams" page
- Modifying exam and solved_exam index views
- Creating some seeds for testing

--- a/app/views/solved_exams/index.html.haml
+++ b/app/views/solved_exams/index.html.haml
@@ -1,25 +1,21 @@
-%h1 Listing solved_exams
-
-%table
-  %thead
-    %tr
-      %th Finished
-      %th Score
-      %th Correct answers
-      %th
-      %th
-      %th
-
-  %tbody
-    - @solved_exams.each do |solved_exam|
-      %tr
-        %td= solved_exam.finished
-        %td= solved_exam.score
-        %td= solved_exam.correct_answers
-        %td= link_to 'Show', solved_exam
-        %td= link_to 'Edit', edit_solved_exam_path(solved_exam)
-        %td= link_to 'Destroy', solved_exam, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
-
-= link_to 'New Solved exam', new_solved_exam_path
+- @solved_exams.each do |solved_exam|
+  .row.exam-box
+    .col-md-8.info
+      - exam = Exam.find(solved_exam.exam_id)
+      %h2= exam.title
+      %h4
+        Creado por:
+        = User.find(exam.user_id).fullname
+      %h4
+        Tiempo limite:
+        %p
+          = exam.time_limit
+          minutos
+          %i.fa.fa-clock-o
+      %h4
+        Cantidad de preguntas:
+        %p= exam.item_quantity
+      %h2= solved_exam.score
+      %span.date.sub-text
+        Finaliza:
+        = exam.expires_on
