--- a/app/assets/stylesheets/exams.scss
+++ b/app/assets/stylesheets/exams.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the Exams controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.exam-box {
+  margin-top: 20px;
+  border-bottom: 2px solid #152737;
+  border-right: 5px solid #152737;
+  padding-bottom: 5px;
+  margin-bottom: 65px;
+  background-color: #f1f1f1;
+  border-top-left-radius: 10px;
+}
+
+.sub-text {
+  color: #aaa;
+  font-size: 1.2em;
+  float: right;
+  clear: both;
+  margin-right: 10px;
+}
