Made some changes to styles, controllers and views
 Changes to be committed:
	modified:   app/assets/stylesheets/exams.scss
	modified:   app/assets/stylesheets/items.scss
	modified:   app/controllers/exams_controller.rb
	modified:   app/controllers/items_controller.rb
	modified:   app/views/exams/index.html.haml
	modified:   app/views/items/index.html.haml
	modified:   db/development.sqlite3
	modified:   db/seeds.rb
	modified:   db/test.sqlite3
	modified:   log/development.log
	new file:   log/test.log
	new file:   spec/javascripts/support/jasmine.yml

--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the Items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.question {
+  padding: 10px;
+  background-color: #ddd;
+  border: none;
+  border-radius: 15px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+.items-container {
+  border: 1px solid #959595;
+  background-color: #fff;
+  -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2), inset 0 0 10px rgba(0, 0, 0, 0.03);
+  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2), inset 0 0 10px rgba(0, 0, 0, 0.03);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2), inset 0 0 10px rgba(0, 0, 0, 0.03);
+  padding: 25px;
+}
