--- a/app/views/exams/index.html.haml
+++ b/app/views/exams/index.html.haml
@@ -15,7 +15,13 @@
         Cantidad de preguntas:
         %p= exam.item_quantity
       - if current_user.id != exam.user_id
-        = link_to 'Realizar', new_exam_path
+        = link_to 'Realizar', items_path(exam_id: exam.id)
+        /- se = SolvedExam.where("user_id = ? AND exam_id = ?", current_user.id, exam.id)
+        /- if se != nil
+        /  - if not se.first.finished
+        /    = link_to 'Continuar', items_path(exam_id: exam.id)
+        /- else
+        /  = link_to 'Realizar', items_path(exam_id: exam.id)
       %span.date.sub-text
         Finaliza:
         = exam.expires_on
