--- a/app/assets/stylesheets/exams.scss
+++ b/app/assets/stylesheets/exams.scss
@@ -6,7 +6,7 @@
   margin-top: 20px;
   border-bottom: 2px solid #152737;
   border-right: 5px solid #152737;
-  padding-bottom: 5px;
+  padding: 15px;
   margin-bottom: 65px;
   background-color: #f1f1f1;
   border-top-left-radius: 10px;
@@ -16,6 +16,5 @@
   color: #aaa;
   font-size: 1.2em;
   float: right;
-  clear: both;
   margin-right: 10px;
 }
