--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,6 +36,10 @@ a {
     text-decoration: none !important;
 }
 
+ul {
+    list-style: none !important;
+}
+
 input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
     -webkit-box-shadow: 0 0 0px 1000px floralwhite inset !important;
 }
