--- a/app/assets/stylesheets/exams.scss
+++ b/app/assets/stylesheets/exams.scss
@@ -18,3 +18,40 @@
   float: right;
   margin-right: 10px;
 }
+
+#new-exam-expiration-date:hover {
+  cursor: hand !important;
+  cursor: pointer !important;
+}
+
+.blue-btn {
+  -webkit-border-radius: 16;
+  -moz-border-radius: 16;
+  border-radius: 16px;
+  font-family: Arial;
+  border: 1px solid #473a57;
+  color: #ffffff;
+  font-size: 15px;
+  background: #103a57;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  margin: 0 auto;
+}
+
+.blue-btn:hover {
+  background: #3f5c6e;
+  text-decoration: none;
+}
+
+.general-button {
+  -webkit-border-radius: 16;
+  -moz-border-radius: 16;
+  border-radius: 16px;
+  font-family: Arial;
+  border: 1px solid #001510;
+  color: #ffffff;
+  font-size: 12px;
+  background: #003010;
+  padding: 5px 10px 5px 10px;
+  text-decoration: none;
+}
