--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -20,3 +20,27 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2), inset 0 0 10px rgba(0, 0, 0, 0.03);
   padding: 25px;
 }
+
+.new-option-input {
+  width: 50%;
+  margin-top: 5px;
+  display: inline-block !important;
+}
+
+.new-item-list {
+  margin-top: 20px;
+}
+
+.new-item-container {
+  padding: 10px;
+  padding-top: 35px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 2px solid #5F91BA;
+  border-radius: 10px;
+}
+
+#new-exam-title {
+  margin-bottom: 15px;
+}
+
