--- a/app/views/exams/new.html.haml
+++ b/app/views/exams/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New exam
+%h1.text-center Creación de nuevo examen
 
 = render 'form'
 
-= link_to 'Back', exams_path
+= link_to 'Back', root_path,{class: "general-button"}
