--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -1,34 +1,26 @@
-= form_for @item do |f|
-  - if @item.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@item.errors.count, "error")} prohibited this item from being saved:"
-      %ul
-        - @item.errors.full_messages.each do |msg|
-          %li= msg
-
-  .field
-    = f.label :question
-    = f.text_field :question
-  .field
-    = f.label :option_1
-    = f.text_field :option_1
-  .field
-    = f.label :option_2
-    = f.text_field :option_2
-  .field
-    = f.label :option_3
-    = f.text_field :option_3
-  .field
-    = f.label :option_4
-    = f.text_field :option_4
-  .field
-    = f.label :option_5
-    = f.text_field :option_5
-  .field
-    = f.label :correct_option
-    = f.number_field :correct_option
-  .field
-    = f.label :item_number
-    = f.number_field :item_number
-  .actions
-    = f.submit 'Save'
+.new-item-container
+  %form.form-horizontal
+    %fieldset
+      / Text input
+      .form-group
+        %label.col-md-4.control-label{:for => "new-item-title"} Enunciado de la pregunta
+        .col-md-6
+          %input#new-exam-title.form-control.input-md{:name => "new-item-title", :placeholder => "Ej: ¿En qué año murió Juan Santamaría?", :required => "", :type => "text"}
+        %label.col-md-4.control-label{:for => "new-item-list"} Opciones
+        .col-md-4
+        %ul.new-item-list.col-md-6{:name => "new-item-list"}
+          %li
+            %input.new-option-input.form-control{placeholder:"Opción 1", name:"choice1"}
+            %input{:type => "radio",name:"choice1",value:"choice1",checked:true}
+          %li
+            %input.new-option-input.form-control{placeholder:"Opción 2" ,name:"choice1"}
+            %input{:type => "radio",name:"choice1",value:"choice1"}
+          %li
+            %input.new-option-input.form-control{placeholder:"Opción 3" ,name:"choice1"}
+            %input{:type => "radio",name:"choice1",value:"choice1"}
+          %li
+            %input.new-option-input.form-control{placeholder:"Opción 4" ,name:"choice1"}
+            %input{:type => "radio",name:"choice1",value:"choice1"}
+          %li
+            %input.new-option-input.form-control{placeholder:"Opción 5" ,name:"choice1"}
+            %input{:type => "radio",name:"choice1",value:"choice1"}
