Adding link for creating a new solved exam
- Added styles to button in exam index
- Fixed exam shw view
 Changes to be committed:
	modified:   app/assets/javascripts/application.js
	modified:   app/assets/javascripts/exams.js
	modified:   app/assets/javascripts/items.js
	modified:   app/assets/stylesheets/exams.scss
	modified:   app/assets/stylesheets/items.scss
	modified:   app/controllers/exams_controller.rb
	modified:   app/controllers/solved_exams_controller.rb
	modified:   app/views/exams/index.html.haml
	renamed:    app/views/items/index.html.haml -> app/views/exams/show.html.haml
	modified:   app/views/items/index.html.haml
	modified:   config/routes.rb

--- a/app/assets/stylesheets/exams.scss
+++ b/app/assets/stylesheets/exams.scss
@@ -12,9 +12,13 @@
   border-top-left-radius: 10px;
 }
 
-.sub-text {
-  color: #aaa;
-  font-size: 1.2em;
-  float: right;
-  margin-right: 10px;
+.exam-btn {
+  height: 80px;
+  width: 80px;
+  border: solid 6px #152737;
+  border-radius: 50px;
+  background-color: #eee;
+  padding-top: 25px;
+  margin: 0 auto;
+  text-align: center;
 }
