--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -31,6 +31,7 @@
   border-radius: 15px;
   padding-left: 10px;
   padding-bottom: 2px;
+  padding-top: 2px;
   font-weight: bold;
   margin-right: 80px;
   margin-left: -10px;
