--- a/app/views/exams/user_exams_index.html.haml
+++ b/app/views/exams/user_exams_index.html.haml
@@ -1,19 +1,27 @@
 - @exams.each do |exam|
-  .row.exam-box
-    .col-md-8.info
-      %h2= exam.title
-      %h4
-        Creado por:
-        = User.find(exam.user_id).fullname
-      %h4
-        Tiempo limite:
-        %p
-          = exam.time_limit
-          minutos
-          %i.fa.fa-clock-o
-      %h4
-        Cantidad de preguntas:
-        %p= exam.item_quantity
-      %span.date.sub-text
-        Finaliza:
-        = exam.expires_on
+  .row
+    .col-md-12.exam-box
+      .row
+        .col-md-4
+          %h2.text-center
+            = exam.title
+            %h4.text-center
+              Creado por:
+              = User.find(exam.user_id).fullname
+        .col-md-2
+          %h4.text-center
+            Tiempo limite:
+            %h5.text-center
+              = exam.time_limit
+              minutos
+              %i.fa.fa-clock-o
+        .col-md-2
+          %h4.text-center
+            Cantidad de preguntas:
+            %h3.text-center
+              = exam.item_quantity
+        .col-md-2
+          %h4.text-center
+            Finaliza:
+            %h5.text-center
+              = exam.expires_on
