--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -88,3 +88,11 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 .main-container {
     padding: 0px 10px 50px 10px;
 }
+
+.homepage-btn {
+    margin-top: 20px !important;
+}
+
+.homepage-btn-container {
+    margin: 0 auto;
+}
