--- a/app/assets/stylesheets/solved_exams.scss
+++ b/app/assets/stylesheets/solved_exams.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the SolvedExams controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.score {
+  height: 100px;
+  width: 100px;
+  border: solid 6px #152737;
+  border-radius: 50px;
+  background-color: #eee;
+  margin: 0 auto;
+  padding-top: 15px;
+}
